--- a/Public/styles.css
+++ b/Public/styles.css
@@ -75,6 +75,16 @@ header h1 {
   cursor: pointer;
 }
 
+.settings-btn{
+  background: #333;
+  color: #fff;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 5px;
+}
+
 .main-content {
   display: flex;
 }
@@ -83,6 +93,10 @@ header h1 {
   display: flex;
   gap: 100px;
   flex-direction: column;
+}
+
+a{
+  text-decoration: none;
 }
 
 .filter-panel {
@@ -349,7 +363,7 @@ header h1 {
   align-items: center;
 }
 
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 478px) {
   header{
     flex-direction: column;
     gap: 20px
